[package]
name = "ldjam57"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# for Windows, use lld instad of default linker
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[dependencies]
bevy = { version = "0.15.3", features = [
    "dynamic_linking",
] } # remove dynamic_linking for releases
leafwing-input-manager = { version = "0.16.0" }
leafwing_input_manager_macros = { version = "0.16.0" }
bevy_rapier2d = { version = "0.29.0", features = ["debug-render-2d"] }