[package]
name = "ldjam57"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# for Windows, use lld instad of default linker
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[features]
dev = [
    "bevy/dynamic_linking", # only include dynamic_linking for dev builds
    "bevy/file_watcher",
]
release = []

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "android-game-activity",
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
] }
leafwing-input-manager = { version = "0.16.0" }
leafwing_input_manager_macros = { version = "0.16.0" }
bevy_rapier2d = { version = "0.29.0", features = ["debug-render-2d"] }
noise = { version = "0.9.0" }
bevy_dev_tools = { version = "0.15.3" }
bevy_asset_loader = { version = "0.22", features = [
    "2d",
    "standard_dynamic_assets",
] }
bevy-inspector-egui = "0.30.0"
bevy_tweening = "0.12"
rand = "0.9.0"
getrandom = { version = "0.3", features = [
    "wasm_js",
] } # needed for wasm builds?
# bevy_old_tv_shader = { git = "https://github.com/Defernus/bevy_old_tv_shader.git", version = "0.2.0" }
bevy_hui = { version = "0.3.0" }
bevy_kira_audio = { version = "0.22.0", features = ["ogg", "mp3"] }
